@@ -1786,6 +1786,7 @@ sh/facetall.sh svneol=native#text/x-sh
 sh/footer.sh svneol=native#text/x-sh
 sh/header.sh svneol=native#text/x-sh
 sh/indent.sh svneol=native#text/x-sh
+sh/ios-icons.sh svneol=native#text/plain
 sh/libtoolfilename.sh svneol=native#text/plain
 sh/linkroot.sh svneol=native#text/x-sh
 sh/make_bz2.sh svneol=native#text/x-sh
