@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2012-04-XX  Release 7.21.X                                     ---
 ----------------------------------------------------------------------
 
+* ios-icon.sh script added for generating IOS icons - Erik Greenwald
 * support for implicit to boundary representation geometry conversion
 	- Cliff Yapp, Wu Jianbang, Sean Morrison
 * added rtwizard support for writing out .png images
